--- a/.gitignore
+++ b/.gitignore
@@ -9,25 +9,8 @@
 /test/tmp/
 /test/version_tmp/
 /tmp/
-
-# Used by dotenv library to load environment variables.
-# .env
-
-## Specific to RubyMotion:
-.dat*
-.repl_history
-build/
-*.bridgesupport
-build-iPhoneOS/
-build-iPhoneSimulator/
-
-## Specific to RubyMotion (use of CocoaPods):
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-# vendor/Pods/
+.idea/
+.DS_Store
 
 ## Documentation cache and generated files:
 /.yardoc/
@@ -48,3 +31,18 @@ build-iPhoneSimulator/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# Jekyll specific
+.jekyll-metadata
+_site/
+
+# JS
+node_modules/
+
+# Webpack compiled files
+assets/javascript/*.js
+assets/javascript/*.js.map
+assets/javascript/*sprite*
+
+# S3 deployment
+.env
