--- a/bin/build
+++ b/bin/build
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-npm run build && bundle exec jekyll build --config ./config/jekyll.yml
+npm run build && bundle exec jekyll build --config ./_config.yml
