Compute the threshold to animate the sticky navigation menu

--- a/_data/social_platforms.yml
+++ b/_data/social_platforms.yml
@@ -1,6 +1,6 @@
 - name: Facebook
   icon: facebook
-  url: https://www.facebook.com/Rubyconfth-294423114523650
+  url: https://www.facebook.com/rubyconfth
 - name: Twitter
   icon: twitter
   url: https://twitter.com/rubyconfth
