Finalize the keynote speakers list styling for medium and large screens

--- a/_data/speakers/keynote.yml
+++ b/_data/speakers/keynote.yml
@@ -3,7 +3,7 @@
   twitter_handle: "@timriley"
   photo_url: /assets/images/pages/home/speakers/tim-riley.png
   bio: |
-    Tim is a partner at <a href="https://www.icelab.com.au/" target="_blank">Icelab</a>, an Australian design agency, and a committed open source software contributor. He’s a co-founder and core team member of <a href="https://dry-rb.org/" target="_blank">dry-rb</a>, core team member of <a href="https://rom-rb.org/" target="_blank">rom-rb</a>, and part of the team building <a href="https://hanamirb.org/" target="_blank">Hanami</a> version 2.
+    Tim is a partner at <a href="https://www.icelab.com.au/" target="_blank">Icelab</a>, an Australian design agency, and a committed open source software contributor. He’s a co-founder and core team member of <a href="https://dry-rb.org/" target="_blank">dry-rb</a>, core team member of <a href="https://rom-rb.org/" target="_blank">rom-rb</a>, and part of the team building <a href="https://hanamirb.org/" target="_blank">Hanami</a> 2.
 - first_name: Richard
   last_name: Schneeman
   twitter_handle: "@schneems"
