Add link to the Instagram profile of the conference

--- a/_data/social_platforms.yml
+++ b/_data/social_platforms.yml
@@ -4,3 +4,6 @@
 - name: Twitter
   icon: twitter
   url: https://twitter.com/rubyconfth
+- name: Instagram
+  icon: instagram
+  url: https://www.instagram.com/rubyconfth
