Fix "Richards" -> "Richard"

--- a/_data/speakers/keynote.yml
+++ b/_data/speakers/keynote.yml
@@ -9,7 +9,7 @@
   twitter_handle: "@schneems"
   photo_url: /assets/images/pages/home/speakers/richard-schneeman.png
   bio: |
-    Richards codes for Heroku & is married to Ruby, literally. He built <a href="https://www.codetriage.com/" target="_blank">CodeTriage.com</a>, the easiest way to get started contributing to Open Source. He also runs a quirky conf in Austin, Texas <a href="https://twitter.com/keeprubyweird" target="_blank">@keeprubyweird</a>.
+    Richard codes for Heroku & is married to Ruby, literally. He built <a href="https://www.codetriage.com/" target="_blank">CodeTriage.com</a>, the easiest way to get started contributing to Open Source. He also runs a quirky conf in Austin, Texas <a href="https://twitter.com/keeprubyweird" target="_blank">@keeprubyweird</a>.
 - first_name: Saron
   last_name: Yitbarek
   twitter_handle: "@saronyitbarek"
