--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
   "homepage": "hhttps://github.com/bangkokrb/rubyconfth#readme",
   "devDependencies": {
     "@nimbl3/eslint-config-nimbl3": "2.1.1",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.2",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-es2015": "6.24.1",
+    "@babel/cli": "7.4.4",
+    "@babel/core": "7.4.4",
+    "@babel/polyfill": "7.4.4",
+    "@babel/preset-env": "7.4.4",
+    "babel-loader": "8.0.5",
     "eslint": "5.10.0",
     "eslint-plugin-vue": "5.0.0",
     "svg-spritemap-webpack-plugin": "3.0.2",
