--- a/package.json
+++ b/package.json
@@ -20,25 +20,24 @@
   "homepage": "hhttps://github.com/bangkokrb/rubyconfth#readme",
   "devDependencies": {
     "@nimbl3/eslint-config-nimbl3": "2.1.1",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.2",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-es2015": "6.24.1",
-    "eslint": "5.10.0",
-    "eslint-plugin-vue": "5.0.0",
-    "svg-spritemap-webpack-plugin": "3.0.2",
-    "vue-loader": "15.4.2",
-    "vue-template-compiler": "2.5.17",
-    "webpack": "4.27.1",
-    "webpack-cli": "3.1.2",
+    "@babel/cli": "7.4.4",
+    "@babel/core": "7.4.4",
+    "@babel/polyfill": "7.4.4",
+    "@babel/preset-env": "7.4.4",
+    "babel-loader": "8.0.5",
+    "eslint": "5.16.0",
+    "eslint-plugin-vue": "5.2.2",
+    "svg-spritemap-webpack-plugin": "3.3.0",
+    "vue-loader": "15.7.0",
+    "vue-template-compiler": "2.6.10",
+    "webpack": "4.31.0",
+    "webpack-cli": "3.3.2",
     "webpack-shell-plugin": "0.5.0"
   },
   "dependencies": {
     "body-scroll-lock": "2.6.1",
-    "bootstrap.native": "2.0.25",
-    "smoothscroll-polyfill": "0.4.3",
-    "vue": "2.5.21"
+    "bootstrap.native": "2.0.26",
+    "smoothscroll-polyfill": "0.4.4",
+    "vue": "2.6.10"
   }
 }
