--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -10,3 +10,9 @@
   photo_url: /assets/images/pages/home/speakers/piotr-murach.png
   bio: |
     A software engineer with an interest in tooling, automation, and testing. A creator of over 50 Ruby gems including the TTY toolkit for building sleek command line apps. He writes his ruminations about software, technology and more on piotrmurach.com.
+- first_name: Giovanni
+  last_name: Sakti
+  twitter_handle: '@giosakti'
+  photo_url: /assets/images/pages/home/speakers/giovanni-sakti.jpg
+  bio: |
+    Gio comes from Jakarta where he works for GO-JEK as systems engineer. He organizes various meetups, including ruby.id and jakartajs.org. His interests include programming languages and developer automation.
