Add Gitlab logo as a Gold sponsor

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -22,6 +22,9 @@
     - name: Nexmo
       url: https://developer.nexmo.com/
       logo_url: /assets/images/pages/home/sponsors/logo-nexmo.jpg
+    - name: Gitlab
+      url: https://about.gitlab.com/
+      logo_url: /assets/images/pages/home/sponsors/logo-gitlab.jpg
 - title: Partners
   slug: partner
   companies:
