Add Rodrigo Urubatan to speakers.yml

--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -52,3 +52,7 @@
   photo_url: /assets/images/pages/home/speakers/gabriel_fortuna.jpg
   bio: |
     Gabriel is the founder of Zero One Bespoke Software Development, a South African Ruby consultancy that specialises in developing integrated systems for the Telecommunications industry. In his day job, he tells computers what to do. Sometimes they listen.
+- first_name: Rodrigo
+  last_name: Urubatan
+  twitter_handle: '@urubatan'
+  photo_url: /assets/images/pages/home/speakers/rodrigo-urubatan.png
