--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -62,3 +62,9 @@
   photo_url: /assets/images/pages/home/speakers/sergey-dolganov.jpg
   bio: |
     Sergey has been a software developer for 10 years of which he spent the last 6 or so in the Ruby world. He's interested in building a strong and sustainable community around open-source development and likes to collect and discuss different ways to profile, debug and optimize applications. He also loves dogs and is a drummer and musician.
+- first_name: Jaroslava
+  last_name: Košanová
+  twitter_handle: '@jajina_k'
+  photo_url: /assets/images/pages/home/speakers/jaroslava-kosanova.jpg
+  bio: |
+    Jarka is Ruby Backend Engineer working on GitLab, a single application with features for the entire DevOps lifecycle. Jarka really enjoys working for the remote only company because she has an active lifestyle and takes care of her 1.5 years old daughter.
