--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -68,3 +68,9 @@
   photo_url: /assets/images/pages/home/speakers/jaroslava-kosanova.jpg
   bio: |
     Jarka is Ruby Backend Engineer working on GitLab, a single application with features for the entire DevOps lifecycle. Jarka really enjoys working for the remote only company because she has an active lifestyle and takes care of her 1.5 years old daughter.
+- first_name: Harley Davidson
+  last_name: Kareel
+  twitter_handle: '@harleydavidkar1'
+  photo_url: /assets/images/pages/home/speakers/harley-davidson-karel.jpg
+  bio: |
+    Application security consultant for Vantage Point Security. Certified Ethical Hacker, Speaker for several conferences in Jakarta, Kuala Lumpur, Singapore, Tokyo, Bangkok with topic related to application security.
