fix typo Shweta

--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -79,7 +79,7 @@
   twitter_handle: '@shwetakale13'
   photo_url: /assets/images/pages/home/speakers/shweta-kale.jpg
   bio: |
-    hweta is an avid Rubyist and Gopher working with Josh Software from past 5 years. She co-organises RubyConf India, DeccanRuby Conf, RailsGirls Pune and GoLang Girls Pune.
+    Shweta is an avid Rubyist and Gopher working with Josh Software from past 5 years. She co-organises RubyConf India, DeccanRuby Conf, RailsGirls Pune and GoLang Girls Pune.
 - first_name: Phil
   last_name: Nash
   twitter_handle: '@philnash'
