--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -3,7 +3,7 @@
   twitter_handle: '@rstankov'
   photo_url: /assets/images/pages/home/speakers/radoslav-stankov.jpg
   bio: |
-    Web developer with 17+ years of experience, currently is the head of engineering at Product Hunt (by Angel List). Lately, he is juggling between Ruby, Javascript projects, with the belief that it's equally important to work both on the frontend and on the backend. Organizer of <a href="http://react-not-a-conf.com/" target="_blank">React.NotAConf</a> conference and <a href="https://www.meetup.com/React-Sofia/" target="_blank">React.Sofia</a> meetup.
+    Web developer with 17+ years of experience, currently is the head of engineering at Product Hunt (by AngelList). Lately, he is juggling between Ruby and Javascript projects, with the belief that it's equally important to work both on the frontend and on the backend. Organizer of <a href="http://react-not-a-conf.com/" target="_blank">React.NotAConf</a> conference and <a href="https://www.meetup.com/React-Sofia/" target="_blank">React.Sofia</a> meetup.
 - first_name: Piotr
   last_name: Murach
   twitter_handle: '@piotr_murach'
@@ -15,7 +15,7 @@
   twitter_handle: '@giosakti'
   photo_url: /assets/images/pages/home/speakers/giovanni-sakti.jpg
   bio: |
-    Gio comes from Jakarta where he works for GO-JEK as systems engineer. He organizes various meetups, including <a href="https://ruby.id/">ruby.id</a> and <a href="https://www.jakartajs.org/" target="_blank">jakartajs.org</a>. His interests include programming languages and developer automation.
+    Gio comes from Jakarta where he works for GO-JEK as a systems engineer. He organizes various meetups, including <a href="https://ruby.id/">ruby.id</a> and <a href="https://www.jakartajs.org/" target="_blank">jakartajs.org</a>. His interests include programming languages and developer automation.
 - first_name: Vishal
   last_name: Chandnani
   twitter_handle: ''
@@ -27,13 +27,13 @@
   twitter_handle: '@dsalahutdinov1'
   photo_url: /assets/images/pages/home/speakers/dmitry-salahutdinov.jpg
   bio: |
-    Dmitry is originally a mathematician and currently works as backend developer at <a href="https://amplifr.com/en/" target="_blank">Amplifr</a>, He's a family-man with 3 kids, maintainer of the <a href="https://github.com/logux/logux_rails" target="_blank">logux_rails</a>contributes to other FOSS projects occasionally.
+    Dmitry is originally a mathematician and currently works as a backend developer at <a href="https://amplifr.com/en/" target="_blank">Amplifr</a>, He's a family-man with 3 kids, maintainer of the <a href="https://github.com/logux/logux_rails" target="_blank">logux_rails</a> and contributes to other FOSS projects.
 - first_name: Leandro
   last_name: Ostera
   twitter_handle: '@leostera'
   photo_url: /assets/images/pages/home/speakers/leandro-ostera.jpg
   bio: |
-    Leandro is a Research Engineer at SRC, where he's rebuilding the foundations of the Web using ReasonML and the Actor model. In the past he's worked at both Swedish unicorns Klarna and Spotify.
+    Leandro is a Research Engineer at SRC, where he's rebuilding the foundations of the Web using ReasonML and the Actor model. In the past he's worked at Swedish unicorns Klarna and Spotify.
 - first_name: Tae Noppakun
   last_name: Wongsrinoppakun
   twitter_handle: '@tae8838'
@@ -45,7 +45,7 @@
   twitter_handle: '@284km'
   photo_url: /assets/images/pages/home/speakers/kazuma-furuhashi.jpg
   bio: |
-    Kazuma Furuhashi is a programmer and the creator of a visualization library named <a href="https://github.com/red-data-tools/charty" target="_blank">Charty</a>. A member of <a href="https://asakusarb.esa.io/" target="_blank">Asakusa.rb</a>, <a href="https://red-data-tools.github.io/" target="_blank">Red Data Tools</a>. Working at <a href="https://speee.jp/"  target="_blank">Speee Inc</a>.
+    Kazuma Furuhashi is a programmer and the creator of a visualization library named <a href="https://github.com/red-data-tools/charty" target="_blank">Charty</a>. A member of <a href="https://asakusarb.esa.io/" target="_blank">Asakusa.rb</a> and <a href="https://red-data-tools.github.io/" target="_blank">Red Data Tools</a>. Working at <a href="https://speee.jp/"  target="_blank">Speee Inc</a>.
 - first_name: Gabriel
   last_name: Fortuna
   twitter_handle: '@gee_forr'
@@ -67,13 +67,13 @@
   twitter_handle: '@jajina_k'
   photo_url: /assets/images/pages/home/speakers/jaroslava-kosanova.jpg
   bio: |
-    Jarka is Ruby Backend Engineer working on GitLab, a single application with features for the entire DevOps lifecycle. Jarka really enjoys working for the remote only company because she has an active lifestyle and takes care of her 1.5 years old daughter.
+    Jarka is Ruby Backend Engineer working on GitLab, a single application with features for the entire DevOps lifecycle. Jarka really enjoys working for the remote-only company because she has an active lifestyle and takes care of her 1.5 year old daughter.
 - first_name: Harley Davidson
   last_name: Kareel
   twitter_handle: '@harleydavidkar1'
   photo_url: /assets/images/pages/home/speakers/harley-davidson-karel.jpg
   bio: |
-    Application security consultant for Vantage Point Security. Certified Ethical Hacker, Speaker for several conferences in Jakarta, Kuala Lumpur, Singapore, Tokyo, Bangkok with topic related to application security.
+    Application security consultant for Vantage Point Security. Certified Ethical Hacker, speaker for several conferences in Jakarta, Kuala Lumpur, Singapore, Tokyo and Bangkok with topics related to application security.
 - first_name: Shweta
   last_name: Kale
   twitter_handle: '@shwetakale13'
