Add speaker sponsor "Josh"

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -31,6 +31,9 @@
     - name: Brightwire
       url: https://www.brightwire.com
       logo_url: /assets/images/pages/home/sponsors/logo-brightwire.jpg
+    - name: Josh
+      url: https://www.joshsoftware.com/
+      logo_url: /assets/images/pages/home/sponsors/logo-josh.jpg
 - title: Partners
   slug: partner
   companies:
