--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -34,6 +34,9 @@
     - name: Josh
       url: https://www.joshsoftware.com/
       logo_url: /assets/images/pages/home/sponsors/logo-josh.jpg
+    - name: Speee
+      url: https://speee.jp/
+      logo_url: /assets/images/pages/home/sponsors/logo-speee.jpg
 - title: Partners
   slug: partner
   companies:
