--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -40,6 +40,9 @@
     - name: Wovn
       url: https://wovn.io/
       logo_url: /assets/images/pages/home/sponsors/logo-wovn.jpg
+    - name: Zero One
+      url: http://www.zero-one.io/
+      logo_url: /assets/images/pages/home/sponsors/logo-zero-one.jpg
 - title: Partners
   slug: partner
   companies:
