Add Enrique Mogollan to speakers.yml

--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -94,3 +94,8 @@
   photo_url: /assets/images/pages/home/speakers/melvrick-chun.png
   bio: |
     Melvrick is a Senior Engineer at Ascenda Loyalty working on various products. He now leads TransferConnect, a points exchange marketplace. He likes coding & Ruby makes it even more joyful for him. Outside of work, he likes reading, an occasional jog and writing in the 3rd person for conference intros.
+- first_name: Enrique
+  last_name: Mogollan
+  twitter_handle: '@mogox'
+  photo_url: /assets/images/pages/home/speakers/enrique-mogollan.jpg
+  bio: Enrique has been passionate about writing code for more than 12 years. His experience as software engineer ranges from backend and web applications to integrations and open source projects. He is a big fan of pair programming and believes that collaborative environments are the key to promote quality code and improve software design. Enrique was born and raised in San Miguel de Allende, Mexico.  He has lived in Valencia, Spain and San Francisco, California.  He enjoys traveling and reading.
