Fix speaker name

--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -65,7 +65,7 @@
   bio: |
     Jarka is Ruby Backend Engineer working on GitLab, a single application with features for the entire DevOps lifecycle. Jarka really enjoys working for the remote-only company because she has an active lifestyle and takes care of her 1.5 year old daughter.
 - first_name: Harley Davidson
-  last_name: Kareel
+  last_name: Karel
   twitter_handle: '@harleydavidkar1'
   photo_url: /assets/images/pages/home/speakers/harley-davidson-karel.jpg
   bio: |
