--- a/_data/speakers/speakers.yml
+++ b/_data/speakers/speakers.yml
@@ -7,9 +7,9 @@
 - first_name: Piotr
   last_name: Murach
   twitter_handle: '@piotr_murach'
-  photo_url: /assets/images/pages/home/speakers/piotr-murach.png
+  photo_url: /assets/images/pages/home/speakers/piotr-murach.jpg
   bio: |
-    A software engineer with an interest in tooling, automation, and testing. A creator of over 50 Ruby gems including the <a href=" https://piotrmurach.github.io/tty/" target="_blank">TTY toolkit for building sleek command line apps. He writes his ruminations about software, technology and more on <a href="https://piotrmurach.com" target="_blank">piotrmurach.com</a>.
+    A software engineer with an interest in tooling, automation, and testing. A creator of over 50 Ruby gems including the <a href=" https://piotrmurach.github.io/tty/" target="_blank">TTY toolkit</a> for building sleek command line apps. He writes his ruminations about software, technology and more on <a href="https://piotrmurach.com" target="_blank">piotrmurach.com</a>.
 - first_name: Giovanni
   last_name: Sakti
   twitter_handle: '@giosakti'
@@ -43,13 +43,13 @@
 - first_name: Gabriel
   last_name: Fortuna
   twitter_handle: '@gee_forr'
-  photo_url: /assets/images/pages/home/speakers/gabriel_fortuna.jpg
+  photo_url: /assets/images/pages/home/speakers/gabriel-fortuna.jpg
   bio: |
     Gabriel is the founder of Zero One Bespoke Software Development, a South African Ruby consultancy that specialises in developing integrated systems for the Telecommunications industry. In his day job, he tells computers what to do. Sometimes they listen.
 - first_name: Rodrigo
   last_name: Urubatan
   twitter_handle: '@urubatan'
-  photo_url: /assets/images/pages/home/speakers/rodrigo-urubatan.png
+  photo_url: /assets/images/pages/home/speakers/rodrigo-urubatan.jpg
   bio: |
     Rodrigo Urubatan works as a software developer since 1997 and has worked with many languages such as Delphi, C++, C, Visual Basic, C#, Java, Ruby, Python, and others. He currently works for Brightwire and has the goal to help Ruby developers to use the best tools for each job, so they can solve hard problems, with less bugs and have more free time.
 - first_name: Sergey
@@ -91,7 +91,7 @@
 - first_name: Melvrick Goh Aik
   last_nam: Chun
   twitter_handle: ''
-  photo_url: /assets/images/pages/home/speakers/melvrick-chun.png
+  photo_url: /assets/images/pages/home/speakers/melvrick-chun.jpg
   bio: |
     Melvrick is a Senior Engineer at Ascenda Loyalty working on various products. He now leads TransferConnect, a points exchange marketplace. He likes coding & Ruby makes it even more joyful for him. Outside of work, he likes reading, an occasional jog and writing in the 3rd person for conference intros.
 - first_name: Enrique
